5360 patch (5260.txt)